# cmdproc-gdnative

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  mingw.cmake
.github/workflows/: build-linux.yml  build-windows.yml
project/: main.gd
project/gdnative/: gddl.gdnlib
src/: cmdproc.c  cmdproc.h  cmdshim.c  cmdshim.h  gddl.c  gddl.h
