# min version could probably be less than this.
cmake_minimum_required(VERSION 3.20)
#
if (WIN32)
    set(PLATFORM windows)
else()
    set(PLATFORM linuxbsd)
endif()
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/project/gdnative/${PLATFORM}")
project (gddl)
find_package(CURL REQUIRED)
set(SOURCES src/gddl.c)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
add_subdirectory(zip)
include_directories(godot-headers)
include_directories(zip/src)
include_directories(${CURL_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PRIVATE zip)