# min version could probably be less than this.
cmake_minimum_required(VERSION 3.15)
#
if (WIN32)
    set(PLATFORM windows)
else()
    set(PLATFORM linuxbsd)
endif()
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/project/gdnative/${PLATFORM}")
project (cmdproc)
find_package(CURL REQUIRED)
set(SOURCES src/cmdproc.c)
add_link_options(-lpipeline)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
include_directories(godot-headers)